# precursor

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  alembic.ini  hatch_build.py  precursor.db-shm  precursor.db-wal  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/prompts/: release.prompt.md  ship-change.prompt.md
.github/workflows/: ci.yml  pages.yml  release.yml
.impeccable/: config.json  hook.cache.json
docs/: architecture.md  live-meeting-assistant.md  plugins.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AboutModal.tsx  AgentList.tsx  AgentPermissionBody.tsx  AgentSettingsPanel.tsx  AgentStatusBadge.tsx  AgentTimeline.tsx  AgentUsage.tsx  AgentView.tsx  AgentsSettings.tsx  AgentsTab.tsx  ArchivePanel.tsx  ArchivedTopicsPanel.tsx  AssistSection.tsx  ChatList.tsx  ChatPanel.tsx  ChatSessionPanel.tsx  ChatSettingsPanel.tsx  ChatStatsPanel.tsx  CockpitList.tsx  CockpitView.tsx  CollapsibleSection.tsx  CommandDraftCard.tsx  CommandPalette.tsx  CommandPanel.tsx  Composer.tsx  ComposerModelControls.tsx  ConfirmDialog.tsx  ContextSection.tsx  CopyableMarkdown.tsx  DetachedCommandController.tsx  DetachedDraftHost.tsx  DetachedLiveSummaryController.tsx  DetachedLiveSummaryHost.tsx  DetachedNotesController.tsx  DetachedWindowPortal.tsx  DevicePicker.tsx  FeaturePicker.tsx  FileTree.tsx  GitDiffViewer.tsx  HomePage.tsx  (+60 more)
frontend/src/components/icons/: GithubIcon.tsx
frontend/src/lib/: agenda.ts  api.ts  attachments.ts  clientId.ts  commands.ts  constants.ts  datetime.ts  detachedDraftStore.ts  events.ts  liveSummaryStore.ts  mcpAuth.ts  modelsStore.ts  notifications.ts  plugins.ts  rolesStore.ts  searchHighlight.tsx  sections.ts  settingsStore.ts  skillsStore.ts  sse.ts  streamStore.ts  suggestions.ts  theme.ts  toolMeta.ts  types.ts  useAzureSpeech.ts  useChatScroll.ts  useConversationTranscriber.ts  useFloatingWindow.ts  useIssueContext.ts  useMessageDeletion.ts  useMultiSelect.ts  useNotesDraft.ts  usePendingAttachments.ts  useRefine.ts  useReminders.ts  useResizableBox.ts  useResizableHeight.ts  useResizableWidth.ts  useScrollActiveIntoView.ts  (+5 more)
precursor/: __init__.py
precursor/backend/: __init__.py  __main__.py  banner.py  config.py  db.py  logging_config.py  main.py
precursor/backend/alembic/: env.py  script.py.mako
precursor/backend/alembic/versions/: .keep  0001_baseline.py  0001_workspaces.py  0002_scheduled_topics.py  0003_schedule_days_of_week.py  0004_schedule_time_of_day.py  0005_local_workspaces.py  (+37 more)
precursor/backend/models/: __init__.py  agent_event.py  agent_schedule.py  agent_session.py  attachment.py  base.py  chat.py  cockpit.py  issue_context.py  mcp_server.py  meeting.py  memory.py  message.py  note_draft.py  note_draft_attachment.py  reminder.py  role.py  settings.py  skill.py  topic.py  topic_schedule.py  usage.py  workspace.py
precursor/backend/plugins/: __init__.py  registry.py
precursor/backend/routers/: __init__.py  agents.py  attachments.py  chat.py  chat_messages.py  chats.py  cockpits.py  commands.py  deps.py  events.py  github.py  issue.py  live.py  llm.py  mcp.py  me.py  memories.py  projects.py  raw.py  refine.py  reminders.py  roles.py  schedules.py  search.py  settings.py  skills.py  stats.py  stt.py  summary.py  topics.py  version.py  workspaces.py
precursor/backend/schemas/: __init__.py  agent.py  agent_schedule.py  chat.py  cockpit.py  llm.py  meeting.py  memory.py  message.py  projects.py  refine.py  reminder.py  role.py  schedule.py  search.py  settings.py  skill.py  stats.py  topic.py  workspace.py
precursor/backend/services/: __init__.py  app_settings.py  attachment_extraction.py  background_poll.py  backup.py  backup_ticker.py  blob_store.py  cmd_runner.py  cockpits.py  context_budget.py  events.py  github_auth.py  github_client.py  image_uploads.py  live_transcript_retention.py  live_transcript_ticker.py  meeting_agenda.py  meeting_analysis.py  meeting_summary.py  meeting_transcript.py  memories.py  message_paging.py  note_drafts.py  notes.py  reminder_ticker.py  reminders.py  roles.py  schedule_timing.py  scheduled_commands.py  scheduler.py  search.py  skills.py  slugs.py  stt.py  suggestions.py  system_stats.py  text_refine.py  tool_result_retention.py  tool_result_ticker.py  topic_issue.py  (+6 more)
tests/: conftest.py  test_agent_schedules.py  test_agents.py  test_agents_auth_surface.py  test_app.py  test_backup.py  test_banner.py  test_chat_description_prompt.py  test_chat_tool_result.py  test_cmd_runner.py  test_cockpits.py  test_docs_serving.py  test_frontend_build.py  test_issue_detail.py  test_launcher_ports.py  test_live_sessions.py  test_live_transcript_retention.py  test_mcp_auth_pause.py  test_mcp_auth_resolved_event.py  test_mcp_deferred_status.py  test_mcp_pool.py  test_memory_commands.py  test_playwright_mcp.py  test_precursor_mcp.py  test_projects.py  test_refine.py  test_reminders.py  test_roles.py  test_scheduled_commands.py  test_skills.py  test_suggestions.py  test_system_stats.py  test_tool_result_retention.py  test_topic_schedules.py  test_usage_stats.py  test_version.py  test_workiq_keepalive.py  test_workiq_preview.py  test_workspace_fs.py
website/: README.md  index.md  package-lock.json  package.json
website/.vitepress/: config.mts
website/.vitepress/theme/: Layout.vue  Screenshot.vue  custom.css  index.ts
website/contributing/: index.md  releasing.md  workflow.md
website/features/: agents.md  attachments.md  chats.md  command-runner.md  index.md  kanban.md  live-sessions.md  mcp.md  plugins.md  scheduler.md  skills-memory.md  topics.md  workspaces.md
website/guide/: configuration.md  installation.md  introduction.md  quick-start.md
website/public/: CNAME
website/reference/: api.md  architecture.md  configuration.md  plugins.md  stack.md
(+23 files in other folders)
