[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "precursor"
# Version is CalVer (YYYY.M.MICRO), derived from the latest git tag (v<version>)
# by hatch-vcs — see [tool.hatch.version]. Tag a release with e.g. `v2026.6.0`.
dynamic = ["version"]
description = "Per-topic AI chat interface for work follow-up, where each topic maps to a GitHub issue."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Precursor contributors" }]
keywords = ["chat", "github", "copilot", "mcp", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sse-starlette>=3.4.4",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "mcp>=1.27.2",
    "python-multipart>=0.0.32",
    "pypdf>=6.13.3",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.31.0"]
dev = [
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
]

[project.scripts]
precursor = "precursor.backend.__main__:main"

# Plugin discovery — third-party packages register entry points under this group.
# A plugin module must expose a `register(registry)` callable.
[project.entry-points."precursor.plugins"]
# example_plugin = "my_pkg.precursor_plugin:register"

[project.urls]
Homepage = "https://github.com/lrivallain/precursor"
Repository = "https://github.com/lrivallain/precursor"
Issues = "https://github.com/lrivallain/precursor/issues"
Changelog = "https://github.com/lrivallain/precursor/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["precursor"]

# The built SPA (frontend/dist) is bundled inside the package as
# precursor/frontend_dist so an installed wheel is self-contained — `uvx
# precursor` / `uv tool install precursor` then serve the UI with no extra
# files. This is done by a *conditional* build hook (hatch_build.py) rather than
# a static force-include: editable installs (`uv sync`, dev, CI) don't build the
# frontend, and a static force-include would fail on the missing directory. The
# hook only bundles for non-editable wheels when frontend/dist exists; at
# runtime the source tree's frontend/dist is the fallback.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# frontend/dist is gitignored (a build product), so it's excluded from the sdist
# by default. `uv build` builds the wheel *from the sdist*, so the SPA must ride
# along in the sdist. `artifacts` overrides gitignore; the sdist force-include
# is only consulted when a frontend build is present (release builds).
[tool.hatch.build]
artifacts = ["frontend/dist/**"]

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

# CalVer version derived from git tags (tag a release `v2026.6.0`). Untagged
# dev builds get e.g. `2026.6.1.devN+g<sha>.dYYYYMMDD`. The fallback keeps
# builds working in a shallow checkout with no tags/history.
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

# Write the resolved version into the package so installed wheels report it
# without needing git. Ignored by git (regenerated at build time).
[tool.hatch.build.hooks.vcs]
version-file = "precursor/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501: line length handled by the formatter.
# B008: FastAPI's `Depends()` / `Query()` defaults are the framework idiom.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["frontend/", "precursor/backend/alembic/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
